--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "homepage": "https://github.com/Telcoin-Association/telcoin-laboratories-contracts#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.20.1",
-    "solidity-docgen": "^0.6.0-beta.36"
+    "hardhat": "^2.20.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
