--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@openzeppelin/contracts": "^5.0.1",
     "@openzeppelin/contracts-upgradeable": "^5.0.1",
     "@uniswap/v4-core": "^1.0.1",
-    "@uniswap/v4-periphery": "^1.0.1"
+    "@uniswap/v4-periphery": "^1.0.1",
+    "dotenv": "^17.2.0"
   }
 }
