Complete fuzz tests for swap over LP positions

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-foundry": "^1.2.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@uniswap/universal-router": "^2.0.0",
     "hardhat": "^2.20.1"
   },
   "dependencies": {
