--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "5.4",
     "@openzeppelin/contracts-upgradeable": "5.4",
-    "@uniswap/v4-core": "1.0.1",
-    "@uniswap/v4-periphery": "1.0.1",
+    "@uniswap/v4-core": "^1.0.2",
+    "@uniswap/v4-periphery": "^1.0.3",
     "dotenv": "^17.2.0"
   }
 }
